--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -21,4 +21,4 @@ jobs:
           if: always()
           with:
             name: reports
-            path: ${{ github.workspace }}/reports
+            path: ${{ github.workspace }}
