--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -22,3 +22,8 @@ jobs:
           with:
             name: reports
             path: ${{ github.workspace }}
+        - name: Deploy report page to GitHub Page
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_dir: ./
