--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -16,7 +16,14 @@ jobs:
           env:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-
+            
+        - name: Upload test results
+          uses: actions/upload-artifact@v1
+          if: always()
+          with:
+            name: reports
+            path: ${{ github.workspace }}
+        
         - name: Deploy report page to GitHub Page
           uses: peaceiris/actions-gh-pages@v3
           with:
