--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -15,32 +15,37 @@ jobs:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
             ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+        
         - name: Upload test results
           uses: actions/upload-artifact@v1
           if: always()
           with:
             name: report
             path: ${{ github.workspace }}/report
+        
         - name: Deploy report page to GitHub Page
           uses: peaceiris/actions-gh-pages@v3
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_dir: ./report
+    
     generate_report:
         if: always()
         needs: [test] 
         runs-on: ubuntu-latest
         steps:
-        - name: Download reports
+        - name: Download report
           uses: actions/download-artifact@v1
           with:
-            name: reports
+            name: report
+        
         - name: Get Repository Owner & Name
           run: |
             export OWNER="$(echo "${{ github.repository }}" | awk -F / '{print $1}' | sed -e "s/:refs//")"
             export REPO="$(echo "${{ github.repository }}" | awk -F / '{print $2}' | sed -e "s/:refs//")"
             echo "::set-env name=REPOSITORY_OWNER::$OWNER"
             echo "::set-env name=REPOSITORY_NAME::$REPO"
+        
         - name: Send report to commit
           uses: joonvena/robotframework-reporter-action@v0.1
           env:
