--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -14,6 +14,7 @@ jobs:
           env:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
+            ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
         
         - name: Upload test results
           uses: actions/upload-artifact@v1
