--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -11,10 +11,9 @@ jobs:
         - uses: actions/checkout@v2
         - name: Execute tests
           uses: joonvena/robotframework-docker-action@v0.1
-          env:
-            BROWSER: chrome
-            ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+          with:
+            browser: chrome
+            run: robot -d ./report Test
             
         - name: Upload test results
           uses: actions/upload-artifact@v1
