--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -7,24 +7,22 @@ on:
 jobs:
     test:
         runs-on: ubuntu-latest
+        name: Run Robot Framework Tests
         steps:
-        - uses: actions/checkout@v2
-        - name: Execute tests
-          uses: joonvena/robotframework-docker-action@v1.0
-          env:
-            BROWSER: chrome
-            ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-            ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+          - name: Checkout
+            uses: actions/checkout@v2
+          - name: Robot Framework
+            uses: joonvena/robotframework-docker-action@v1.0
             
-        - name: Upload test results
-          uses: actions/upload-artifact@v1
-          if: always()
-          with:
-            name: report
-            path: ${{ github.workspace }}/report
-            
-        - name: Deploy report page to GitHub Page
-          uses: peaceiris/actions-gh-pages@v3
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./report
+          - name: Upload test results
+            uses: actions/upload-artifact@v1
+            if: always()
+            with:
+              name: report
+              path: ${{ github.workspace }}/report
+
+          - name: Deploy report page to GitHub Page
+            uses: peaceiris/actions-gh-pages@v3
+            with:
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              publish_dir: ./report
