--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -13,6 +13,10 @@ jobs:
             uses: actions/checkout@v2
           - name: Robot Framework
             uses: joonvena/robotframework-docker-action@v1.0
+              env:
+              BROWSER: chrome
+              ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
+              ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
             
           - name: Upload test results
             uses: actions/upload-artifact@v1
