--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -10,7 +10,7 @@ jobs:
         steps:
         - uses: actions/checkout@v2
         - name: Execute tests
-          #uses: joonvena/robotframework-docker-action@v0.1
+          uses: joonvena/robotframework-docker-action@v0.1
         - shell: bash
           run: ${{ github.action_path }}/test.sh
           env:
