--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -13,8 +13,8 @@ jobs:
           uses: joonvena/robotframework-docker-action@v0.1
           env:
             BROWSER: chrome
-            #ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+            ROBOT_TESTS_DIR: ./test/feature
+            ROBOT_REPORTS_DIR: ./report
             
         - name: Upload test results
           uses: actions/upload-artifact@v1
