--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -5,34 +5,24 @@ on:
     branches: [ main ]
 
 jobs:
-    run_tests:
+    test:
         runs-on: ubuntu-latest
         steps:
-        # checkout code from a repository
         - uses: actions/checkout@v2
-        # create folder for test reports
         - name: Create folder for reports
-          run: mkdir reports
-        # run Robot Framework tests inside Docker container
-        - name: Run Robot Framework Tests
-          # container used here is ppodgorsek/robot-framework:latest
-          # see container documentation for usage: https://hub.docker.com/r/ppodgorsek/robot-framework/dockerfile
-          # it is required that GitHub repository contains folder "reports". Commit some file inside "reports" to create it
-          # place tests in folder tests or change docker run command accordingly
-          # configure -e ROBOT_OPTIONS according to yout tests, or remove it if no special configuration is needed
-          run: |
-            docker run \
-              -v ${PWD}/reports:/opt/robotframework-ci/reports:Z \
-              -v ${PWD}/tests:/opt/robotframework-ci/test/feature:Z \
-              --user $(id -u):$(id -g) \
-              ppodgorsek/robot-framework:latest
-        # upload test reports as a zip file
-        - name: Upload reports
+          run: sudo mkdir reports
+        - name: Execute tests
+          uses: joonvena/robotframework-docker-action@v0.1
+          env:
+            BROWSER: chrome
+            ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
+            ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
+        
+        - name: Upload test results
           uses: actions/upload-artifact@v1
           if: always()
           with:
             name: reports
-            # set path to Robot Framework results reports. Exclude dummy file that is needed because of ppodgorsek image priviledges.
             path: ${{ github.workspace }}/reports
             
         - name: Deploy report page to GitHub Page
