--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -12,7 +12,13 @@ jobs:
         - name: Create folder for reports
           run: sudo mkdir reports
         - name: Execute tests
-          uses: joonvena/robotframework-docker-action@v0.1
+          run: |
+            docker run \
+              -v ${PWD}/reports:/opt/robotframework/reports:Z \
+              -v ${PWD}/tests:/opt/robotframework/tests:Z \
+              -e ROBOT_OPTIONS="--variable DINOSAUR:Achillobator --variable NOT_DINOSAUR:kissa" \
+              --user $(id -u):$(id -g) \
+              ppodgorsek/robot-framework:latest
           env:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
