--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -9,30 +9,22 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
-        - name: Create folder for reports
-          run: sudo mkdir reports
         - name: Execute tests
-          run: |
-            docker run \
-              -v ${PWD}/reports:/opt/robotframework/reports:Z \
-              -v ${PWD}/tests:/opt/robotframework/tests:Z \
-              -e ROBOT_OPTIONS="--variable DINOSAUR:Achillobator --variable NOT_DINOSAUR:kissa" \
-              --user $(id -u):$(id -g) \
-              ppodgorsek/robot-framework:latest
+          uses: joonvena/robotframework-docker-action@v0.1
           env:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-            ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
-        
+            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+            
         - name: Upload test results
           uses: actions/upload-artifact@v1
           if: always()
           with:
-            name: reports
-            path: ${{ github.workspace }}/reports
+            name: report
+            path: ${{ github.workspace }}/report
             
         - name: Deploy report page to GitHub Page
           uses: peaceiris/actions-gh-pages@v3
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./reports
+            publish_dir: ./report
