--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -11,9 +11,11 @@ jobs:
         - uses: actions/checkout@v2
         - name: Execute tests
           uses: joonvena/robotframework-docker-action@v0.1
-          env:
-            BROWSER: chrome
-            ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature -d ./report
+        - name: Run tests
+          run: robot -d ./report Test
+          #env:
+            #BROWSER: chrome
+            #ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature -d ./report
             #ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
             
         - name: Upload test results
