--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -14,7 +14,7 @@ jobs:
           env:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-            ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
         - name: Permission folder
           run: sudo chmod 777 ${{ github.workspace }}/report
             
