--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -14,9 +14,9 @@ jobs:
           env:
             BROWSER: chrome
             ROBOT_TESTS_DIR: ${{ github.workspace }}/test/feature
-            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/report
+            ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
         - name: Permission folder
-          run: sudo chmod 777 ${{ github.workspace }}/report
+          run: sudo mkdir chmod 777 ${{ github.workspace }}/report
             
         - name: Upload test results
           uses: actions/upload-artifact@v1
