--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -17,10 +17,10 @@ jobs:
             -v ${{github.workspace}}/reports:/opt/robotframework/reports:Z \
             --user 1001:1000 \
             ppodgorsek/robot-framework:latest
-          env:
-            BROWSER: chrome
-            ROBOT_TESTS_DIR: ${{ github.workspace }}/tests
-            ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
+          #env:
+            #BROWSER: chrome
+            #ROBOT_TESTS_DIR: ${{ github.workspace }}/tests
+            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
           
         - name: Upload test results
           uses: actions/upload-artifact@v1
