--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -5,11 +5,11 @@ on:
     branches: [ main ]
 
 jobs:
-    test:
+    run_test:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
-        - name: Execute tests
+        - name: Run tests
           run: |
             mkdir ${{github.workspace}}/reports
             docker run --shm-size=1g -e BROWSER=headlesschrome \
@@ -17,12 +17,8 @@ jobs:
             -v ${{github.workspace}}/reports:/opt/robotframework/reports:Z \
             --user 1001:1000 \
             ppodgorsek/robot-framework:latest
-          #env:
-            #BROWSER: chrome
-            #ROBOT_TESTS_DIR: ${{ github.workspace }}/tests
-            #ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
           
-        - name: Upload test results
+        - name: Upload tests results
           uses: actions/upload-artifact@v1
           if: always()
           with:
