--- a/.github/workflows/robotframework.yml
+++ b/.github/workflows/robotframework.yml
@@ -27,6 +27,7 @@ jobs:
             
         - name: Deploy report page to GitHub Page
           uses: peaceiris/actions-gh-pages@v3
+          if: always()
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_dir: ./reports
