--- a/.github/workflows/robot.yml
+++ b/.github/workflows/robot.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-    run_test:
+    robotframework-test:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
